--- a/src/styles/ProfilePage.css
+++ b/src/styles/ProfilePage.css
@@ -97,13 +97,11 @@ table td.returned {
 }
 .loading-container {
     display: flex;
-    flex-direction: column;
-    align-items: center;
     justify-content: center;
-    height: 100vh;
-    background: rgba(255, 255, 255, 0.8);
+    align-items: center;
+    min-height: 100vh; /* Ensures full height of the viewport */
+    background-color: #f8f9fa;
 }
-
 .spinner {
     width: 50px;
     height: 50px;
